<resources>
    <string name="app_name">P-X1</string>
    <string name="temp_setting">Thermometry setting</string>
    <string name="image_setting">Image setting</string>
    <string name="Palette_mode">Palette mode</string>
    <string name="White_hot">White hot</string>
    <string name="Black_hot">Black hot</string>
    <string name="Iron_rainbow">Iron rainbow</string>
    <string name="Rainbow_HC">Rainbow_HC</string>
    <string name="Iron_gray">Iron gray</string>
    <string name="title_thermography_settings">Thermography settings</string>
    <string name="title_units">Temperature units</string>
    <string name="units_celsius">Celsius(°C)</string>
    <string name="units_fahrenheit">Fahrenheit(°F)</string>
    <string name="Correction">Correction</string>
    <string name="Reflection">Reflection</string>
    <string name="Amb_temp">Amb temp</string>
    <string name="title_emissivity">Emissivity</string>
    <string name="oppo">OPPO does not support！</string>
    <string name="waittoclick">Please click later!</string>
    <string name="Others">Others</string>
    <string name="About">About</string>
    <string name="Soft_version">Soft version:</string>
    <string name="Product_soft_version">Product soft version:</string>
    <string name="Product_name">Product name:</string>
    <string name="Product_ID">Product ID:</string>
    <string name="Product_SN">Product SN:</string>
    <string name="System_camera">System camera</string>
    <string name="Water_mark">Watermark</string>
    <string name="Water_mark_on">On</string>
    <string name="Water_mark_off">Off</string>
    <string name="System_camera_open">On</string>
    <string name="System_camera_close">Off</string>
    <string name="English">English</string>
    <string name="Simple_Chinese">简体中文</string>
    <string name="Tip_to_connect">Waiting for Xtherm to connect</string>
    <string name="Tip_to_connect_cancel">Cancel</string>
    <string name="Tip_to_connect_wait">ActionInserted</string>
    <string name="Connecting">Connecting</string>
    <string name="Device_is_disconnected">Device is disconnected. Check the Device.</string>
    <string name="Check">Check</string>
    <string name="Connectable_WIFI">Connectable WIFI</string>
    <string name="Rescan">Rescan</string>
    <string name="Select_Profile">Select Profile</string>
    <string name="Guest_Mode">Guest Mode</string>
    <string name="Create_a_new_profile">Create a new profile</string>
    <string name="Storage">Storage</string>
    <string name="Multiplex_Diagnosis">Multiplex Diagnosis</string>
    <string name="Visual_Image">Visual Image</string>
    <string name="Thermal_Image">Thermal Image</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="AVG_dB">AVG dB</string>
    <string name="Real_Time">Real Time</string>
    <string name="Menu">Menu</string>
    <string name="Image_mode">Image mode</string>
    <string name="Storage_Data">Storage Data</string>
    <string name="Control">Control</string>
    <string name="DiagnosisST">Diagnosis</string>
    <string name="Do_you_want_to_start_recoring">Do you want to start recoring?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Do_you_want_to_start_recording_WAVE_for_Diagnosis">Do you want to start recording WAVE for Diagnosis?</string>
    <string name="Cancel">Cancel</string>
    <string name="The_thermal_imaging_camera_is_preparing">The thermal imaging camera is preparing. Please wait a moment.</string>
    <string name="The_camera_is_preparing">The camera is preparing. Please wait a moment.</string>
    <string name="Amber">Amber</string>
    <string name="White">White</string>
    <string name="Highest_TEMP">Highest TEMP</string>
    <string name="Lowest_TEMP">Lowest TEMP</string>
    <string name="Lowest_TEMP_to_overlay">Lowest TEMP to overlay</string>
    <string name="Load_wave_file">Load wave file</string>
    <string name="Load_Picture">Load Picture</string>
    <string name="Method_of_Thermal_Image_Diagnosis">Method of Thermal Image Diagnosis</string>
    <string name="three_Phase_Comparison_method">3 Phase Comparison method</string>
    <string name="TEMP_pattern_method">TEMP pattern method</string>
    <string name="Facility_Voltage">Facility Voltage</string>
    <string name="Power_Distribution_Facility">Power Distribution Facility</string>
    <string name="Power_Transmission_Facility">Power Transmission Facility</string>
    <string name="Substation_Facility">Substation Facility</string>
    <string name="Select_Facility">Select Facility</string>
    <string name="Sheath_wire">Sheath wire</string>
    <string name="Suspension_Insulator">Suspension Insulator</string>
    <string name="Line_Post_Insulator">Line Post Insulator</string>
    <string name="Lightning_Arrestor">Lightning Arrestor</string>
    <string name="Cut_Out_Switch">Cut Out Switch</string>
    <string name="Steel_Crossarm">Steel Crossarm</string>
    <string name="Covers">Covers</string>
    <string name="MCCB">MCCB</string>
    <string name="Power_Fuse">Power \\Fuse</string>
    <string name="Connection">Connection</string>
    <string name="Contact_Part">Contact Part</string>
    <string name="Mechanical_Structural_Part">Mechanical Structural Part</string>
    <string name="Instrument_Transformer">Instrument Transformer</string>
    <string name="Terminal_part">Terminal part</string>
    <string name="Main_Body">Main Body</string>
    <string name="Transformer_Surface_TEMP">Transformer Surface TEMP</string>
    <string name="MOLD_Transformer">MOLD Transformer</string>
    <string name="Iron_core">Iron core</string>
    <string name="Epoxy_Surface_Type_B">Epoxy Surface (Type B)</string>
    <string name="Cables">Cables</string>
    <string name="IV">IV</string>
    <string name="HIV">HIV</string>
    <string name="EV">EV</string>
    <string name="CV">CV</string>
    <string name="VVF">VVF</string>
    <string name="Condensor">Condensor</string>
    <string name="Diagnostic_Reference_TEMP">Diagnostic Reference TEMP</string>
    <string name="Point_TEMP">Point TEMP</string>
    <string name="Facility_Material">Facility Material</string>
    <string name="Ceramic">Ceramic</string>
    <string name="Polymer">Polymer</string>
    <string name="Glass">Glass</string>
    <string name="Etc">Etc</string>
    <string name="Kind_of_Defect">Kind of Defect</string>
    <string name="Crack">Crack</string>
    <string name="Erosion">Erosion</string>
    <string name="Overheating">Overheating</string>
    <string name="Flashover">Flashover</string>
    <string name="Contamination">Contamination</string>
    <string name="Non_glass">Non glass</string>
    <string name="Damaged">Damaged</string>
    <string name="Corrosion">Corrosion</string>
    <string name="Incorrect_installation">Incorrect installation</string>
    <string name="Out_of_Position">Out of Position</string>
    <string name="Foreign_substance">Foreign substance</string>
    <string name="Vegetation_contact">Vegetation contact</string>
    <string name="Ultrasonic_Diagnosis">Ultrasonic Diagnosis</string>
    <string name="Thermal_Image_Diagnosis">Thermal Image Diagnosis</string>
    <string name="Normal">Normal</string>
    <string name="Caution">Caution</string>
    <string name="Faulty">Faulty</string>
    <string name="Possibility_of_deterioration">Possibility of deterioration</string>
    <string name="Subsequent_Defects">Subsequent Defects</string>
    <string name="Defect">Defect</string>
    <string name="Fatal_Faulty">Fatal Faulty</string>
    <string name="Reinspect_within_1_Year">Re-inspect within 1 Year</string>
    <string name="Reinspect_within_1_month">Re-inspect within 1 month</string>
    <string name="Reinspect_within_1_week">Re-inspect within 1 week</string>
    <string name="Reinspect_within_3_Months">Re-inspect within 3 Months</string>
    <string name="Repair_Immediately">Repair Immediately</string>
    <string name="Reinspect_Within_3_Years">Re-inspect Within 3 Years</string>
    <string name="Reinspect_Within_6_Months">Re-inspect Within 6 Months</string>
    <string name="Reinspect_Within_9_Months">Re-inspect Within 9 Months</string>
    <string name="Repair_Immediately_Reinspect_Within_7_Days">Repair Immediately or Re-inspect Within 7 Days</string>
    <string name="Normal._Follow_the_operators_regulations">Normal. Follow the operators regulations</string>
    <string name="Multiplex_Diagnosis_Result">Multiplex Diagnosis Result</string>
    <string name="Ultrasonic_Diagnosis_Result">Ultrasonic Diagnosis Result</string>
    <string name="Thermal_Image_Diagnosis_Result">Thermal Image Diagnosis Result</string>
    <string name="Save">Save</string>
    <string name="Quit">Quit</string>
    <string name="Dectected_dB">Dectected dB</string>
    <string name="Facility_TEMP">Facility TEMP</string>
    <string name="TEMP">TEMP</string>
    <string name="Humidity">Humidity</string>
    <string name="Equipment">Equipment</string>
    <string name="Material">Material</string>
    <string name="Condition">Condition</string>
    <string name="Pattern_Method">Pattern</string>
    <string name="Point">Point</string>
    <string name="Difference_of_TEMP">TEMP DIFF</string>
    <string name="Reference_TEMP_of_Defect">Reference TEMP of Defect</string>
    <string name="Creat_Multiplex_Diagnosis_Report">Creat Multiplex Diagnosis Report</string>
    <string name="Creat_Ultrasonic_Diagnosis_Report">Creat Ultrasonic Diagnosis Report</string>
    <string name="Creat_Thermal_Image_Diagnosis_Report">Creat Thermal Image Diagnosis Report</string>
    <string name="Creat_Report_with_UDR_file">Creat Report with UDR file</string>
    <string name="Load_Report">Load Report</string>
    <string name="Multiplex_Diagnosis_Report">Multiplex Diagnosis Report</string>
    <string name="Ultrasonic_Diagnosis_Report">Ultrasonic Diagnosis Report</string>
    <string name="Thermal_Image_Diagnosis_Report">Thermal Image Diagnosis Report</string>
    <string name="Date">Date</string>
    <string name="Line_Name">Line Name</string>
    <string name="Pole_Number">Pole Number</string>
    <string name="Kind_of_Equipment">Kind of Equipment</string>
    <string name="Equipment_Material">Equipment Material</string>
    <string name="Equipment_Voltage">Equipment Voltage</string>
    <string name="Distance">Distance</string>
    <string name="Weather">Weather</string>
    <string name="Sunny">Sunny</string>
    <string name="Cloudy">Cloudy</string>
    <string name="Rain">Rain</string>
    <string name="Snow">Snow</string>
    <string name="Defective_content_Coment">Defective content Coment</string>
    <string name="Save_Report">Save Report</string>
    <string name="Save_as">Save as</string>
    <string name="Alarm_Setting">Alarm Setting</string>
    <string name="Custom_Button">Custom Button</string>
    <string name="Set_Wave_File_name">Set Wave File name</string>
    <string name="Set_Wave_Recording_Time">Set Wave Recording Time</string>
    <string name="Set_Video_Recording_Time">Set Video Recording Time</string>
    <string name="Fahrenheit_Celsius_Setting">Fahrenheit/Celsius Setting</string>
    <string name="Wave_Form_in_MainDisplay">Wave Form in MainDisplay</string>
    <string name="Initialize_Setting">Initialize Setting</string>
    <string name="Alarm_Function_Active">Alarm Function Active</string>
    <string name="Criteria_dB_for_Alarm">Criteria dB for Alarm</string>
    <string name="Duration_of_reference_dB">Duration of reference dB</string>
    <string name="Alarm_Duration">Alarm Duration</string>
    <string name="Vibration_Active">Vibration Active</string>
    <string name="Sound_Active">Sound Active</string>
    <string name="Icon_Active">Icon Active</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="Rainbow">Rainbow</string>
    <string name="Profile_Name">Name</string>
    <string name="Diagnosis_Report">Diagnosis Report</string>
</resources>