<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="720px"
    android:layout_height="440px"
    android:background="@drawable/layout_round01"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="14dp"
    android:paddingRight="30dp"
    android:paddingBottom="14dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/itemEdit"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="32px"
        android:focusedByDefault="true"
        android:hint="@string/Profile_Name"
        android:singleLine="true"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="50px"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirmButton"
            android:layout_width="180px"
            android:layout_height="100px"
            android:layout_marginEnd="64px"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/Save"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="180px"
            android:layout_height="100px"
            android:layout_marginStart="64px"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/Cancel"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>