<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500px"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round01"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="14dp"
    android:paddingRight="30dp"
    android:paddingBottom="14dp">


    <TextView
        android:id="@+id/dp_sel_01"
        android:layout_width="match_parent"
        android:layout_height="36.3dp"
        android:layout_marginTop="24px"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/Rainbow"
        android:textColor="#49589B"
        android:textSize="18sp"
        android:textStyle="bold" />


    <View
        android:id="@+id/dp_divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24px"
        android:background="#090909" />

    <TextView
        android:id="@+id/dp_sel_02"
        android:layout_width="match_parent"
        android:layout_height="36.3dp"
        android:layout_marginTop="24px"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/Amber"
        android:textColor="#49589B"
        android:textSize="18sp"
        android:textStyle="bold" />


    <View
        android:id="@+id/dp_divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24px"
        android:background="#090909" />

    <TextView
        android:id="@+id/dp_sel_03"
        android:layout_width="match_parent"
        android:layout_height="36.3dp"
        android:layout_marginTop="24px"
        android:layout_marginBottom="24px"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/White"
        android:textColor="#49589B"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>