<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="640px"
        android:layout_height="840px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="640px"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_round01"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180px"
                android:layout_marginTop="48px">

                <TextView
                    android:id="@+id/selectAButton"
                    android:layout_width="480px"
                    android:layout_height="120px"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_next_grey_button"
                    android:gravity="center_vertical"
                    android:paddingLeft="48px"
                    android:paddingTop="10px"
                    android:paddingEnd="48px"
                    android:text="@string/three_Phase_Comparison_method"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="42px" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180px">

                <TextView
                    android:id="@+id/selectBButton"
                    android:layout_width="480px"
                    android:layout_height="120px"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_next_yellow_button"
                    android:gravity="center_vertical"
                    android:paddingLeft="48px"
                    android:paddingTop="10px"
                    android:paddingEnd="48px"
                    android:text="@string/TEMP_pattern_method"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="42px" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4px"
                android:layout_marginLeft="48px"
                android:layout_marginTop="40px"
                android:layout_marginRight="48px"
                android:background="#888888" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="165px">

                <TextView
                    android:id="@+id/saveButton"
                    android:layout_width="300px"
                    android:layout_height="120px"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="24px"
                    android:gravity="center"
                    android:paddingLeft="32px"
                    android:paddingRight="32px"
                    android:text="@string/Save"
                    android:textColor="#333333"
                    android:textSize="38px" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>


