<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1080px"
    android:layout_height="match_parent"
    tools:context=".SettingView.SetCam2Fragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/set_cam2_titleLayer"
            android:layout_width="match_parent"
            android:layout_height="77px"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="30.0dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thermal_Image"
                android:textColor="#E75A45"
                android:textSize="58px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="650px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16px"
                android:text="@string/Diagnosis_Report"
                android:textColor="#294597"
                android:textSize="58px"
                android:textStyle="bold" />

        </LinearLayout>


        <ImageView
            android:id="@+id/set_title_line"
            android:layout_width="match_parent"
            android:layout_height="2.0dip"
            android:layout_below="@+id/set_cam2_titleLayer"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="35.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginEnd="35.0dip"
            android:background="#ff303030" />

        <!--        열화상 1 -->
        <LinearLayout
            android:id="@+id/set_cam2_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/set_title_line"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="30.0dip"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80px"
                android:layout_height="80px"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_marginEnd="20.0dip"
                app:srcCompat="@drawable/reportv_icon_diag" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="16px"
                android:layout_marginEnd="20.0dip"
                android:layout_weight="1"
                android:text="@string/Creat_Report_with_UDR_file"
                android:textColor="#333333"
                android:textSize="48px"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/openUdrButton"
                android:layout_width="100px"

                android:layout_height="100px"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="42px"
                android:padding="18px"
                app:srcCompat="@drawable/setv_icon_next" />

        </LinearLayout>


        <!--   열화상 2 -->
        <LinearLayout
            android:id="@+id/set_cam2_item2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/set_cam2_item1"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="30.0dip"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80px"
                android:layout_height="80px"

                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_marginEnd="20.0dip"
                app:srcCompat="@drawable/reportv_icon_report" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="16px"
                android:layout_marginEnd="20.0dip"
                android:layout_weight="1"
                android:text="@string/Load_Report"
                android:textColor="#333333"
                android:textSize="48px"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/openReportButton"
                android:layout_width="100px"

                android:layout_height="100px"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="42px"
                android:padding="18px"
                app:srcCompat="@drawable/setv_icon_next" />
        </LinearLayout>

        <!--  열화상 3 -->


        <!--  열화상 4 팔레트-->

        <!--  열화상 5-->

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>