<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="800px"
        android:layout_height="860px"
        android:background="@drawable/layout_round01"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120px">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="80px"
                android:layout_centerInParent="true"
                android:paddingTop="16px"
                android:text="@string/Connectable_WIFI"
                android:textColor="#165EC5"
                android:textSize="48px" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4px"
            android:layout_marginLeft="48px"
            android:layout_marginRight="48px"
            android:background="#555555" />


        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/recycler_wifi"-->
        <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
        <!--            android:orientation="vertical"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="530px"-->
        <!--            android:layout_margin="2dp"-->
        <!--            >-->

        <!--        </androidx.recyclerview.widget.RecyclerView>-->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_wifi"
            android:layout_width="match_parent"
            android:layout_height="530px"
            android:layout_margin="32px"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <View
            android:layout_width="match_parent"
            android:layout_height="4px"
            android:layout_marginLeft="48px"
            android:layout_marginRight="48px"
            android:layout_marginBottom="2px"
            android:background="#555555" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120px">

            <TextView
                android:id="@+id/txt_refresh"
                android:layout_width="190px"
                android:layout_height="90px"
                android:layout_centerVertical="true"
                android:layout_marginStart="48px"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/Rescan"
                android:textColor="#333333"
                android:textSize="48px"
                tools:ignore="RelativeOverlap" />

            <ProgressBar
                android:id="@+id/pb_1"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="240px" />

            <TextView
                android:id="@+id/txt_close"
                android:layout_width="180px"
                android:layout_height="90px"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="48px"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/Check"
                android:textColor="#333333"
                android:textSize="48px" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>


